clfswm (20111015.git51b0a02-2) UNRELEASED; urgency=low

  * debian/load.lisp
    + hot-upgrade ASDF if user has a local version of ASDF

 --

clfswm (20111015.git51b0a02-1) unstable; urgency=low

  * refresh debian/patches

 -- Desmond O. Chang <dochang@gmail.com>  Mon, 24 Oct 2011 03:06:27 +0800

clfswm (20110616.git216af7b-1) unstable; urgency=low

  * debian/copyright
    + fix issues
    + add other copyright info
  * refresh debian/patches
  * put manpage in debian/
  * put startup script in debian/
  * move startup options into load.lisp
  * upgrade debhelper compatibility level to 8
  * upgrade Standards-Version to 3.9.2

 -- Desmond O. Chang <dochang@gmail.com>  Sat, 25 Jun 2011 00:05:06 +0800

clfswm (20110418.git050d0a2-1) unstable; urgency=low

  * delete the sample comment in debian/rules
  * debian/copyright
    + fix typo
    + add copyright information from files in contrib/
  * refresh debian/patches

 -- Desmond O. Chang <dochang@gmail.com>  Tue, 19 Apr 2011 08:16:35 +0800

clfswm (20110305.git58f154e-1) unstable; urgency=low

  * Initial release (Closes: #616309)

 -- Desmond O. Chang <dochang@gmail.com>  Sun, 06 Mar 2011 23:56:54 +0800